Actualizo cambios de estilo

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="shortcut icon" href="https://img.icons8.com/?size=100&id=61977&format=png&color=000000" type="image/x-icon">
     <title>Personal Portfolio</title>
   </head>
   <body>
-    <header>
+    <header id="navbar">
       <div class="container">
         <h1>Salva Picharnita</h1>
         <nav>
@@ -22,11 +23,17 @@
     <main>
       <section class="section" id="about">
         <div class="container">
-          <h2>About Me</h2>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati,
-            cupiditate repellendus odit soluta assumenda magni!
-          </p>
+          <div class="about-container">
+            <div>
+              <img id=container-img src="https://picsum.photos/500/300" alt="" />
+            </div>
+            <div>
+              <h2>About Me</h2>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, tempora nostrum magni inventore impedit voluptatem, fugiat aut obcaecati aliquid optio a molestiae quam velit nulla rem reiciendis error enim omnis perspiciatis nihil earum. Nisi porro illo aliquam minima expedita perferendis debitis consequatur repellat, laudantium, aliquid quis quidem soluta labore odit architecto velit, maiores culpa nobis distinctio libero ratione voluptatem quia consequuntur eligendi. Ex pariatur delectus tempore exercitationem, non ipsa sit quibusdam placeat incidunt inventore, distinctio aliquam explicabo itaque harum maxime aliquid deleniti, aut fuga optio alias suscipit eligendi odit. Nihil nostrum asperiores necessitatibus exercitationem pariatur labore maxime voluptate voluptas ducimus!
+              </p>
+            </div>
+          </div>
         </div>
       </section>
       <section class="section" id="portfolio">
